[package]
name = "transit"
version = "0.3.0"
authors = ["crhino <piraino.chris@gmail.com>"]

description = "Send and receive types over UDP packets. A feature-based serialization story, this crate must be compiled with a serialization feature to inform the crate what type of serialization is wanted."

readme = "./README.md"
repository = "https://github.com/crhino/transit"
keywords = ["udp", "network"]
license = "BSD-3-Clause"

[dependencies]
serde = "*"

rmp = { version = "*", optional = true }
rmp-serde = { version = "*", optional = true } # Requires 0.8.0 or greater
serde_json = { version = "*", optional = true }

[dev-dependencies]
serde_macros = "*"

[features]
default = []
msgpack_serialization = ["rmp", "rmp-serde"]
json_serialization = ["serde_json"]
