[package]
name = "transit"
version = "0.3.0"
authors = ["crhino <piraino.chris@gmail.com>"]

description = "Send and receive types over UDP packets. A feature-based serialization story, this crate must be compiled with a serialization feature to inform the crate what type of serialization is wanted."

readme = "./README.md"
repository = "https://github.com/crhino/transit"
documentation = "http://crhino.github.io/transit-docs/transit/index.html"
keywords = ["udp", "network"]
license = "BSD-3-Clause"
build = "build.rs"


[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
serde = "*"

rmp = { version = "*", optional = true }
rmp-serde = { version = ">=0.8.0", optional = true }
serde_json = { version = "*", optional = true }

docopt = { version = "*", optional = true }
docopt_macros = { version = "*", optional = true }
rustc-serialize = { version = "*", optional = true }

[features]
msgpack_serialization = ["rmp", "rmp-serde"]
json_serialization = ["serde_json"]
udp_client = ["docopt", "docopt_macros", "rustc-serialize"]
