[package]
name = "transit"
version = "0.3.0"
authors = ["crhino <piraino.chris@gmail.com>"]

description = "Send and receive types over UDP packets. A feature-based serialization story, this crate must be compiled with a serialization feature to inform the crate what type of serialization is wanted."

readme = "./README.md"
repository = "https://github.com/crhino/transit"
keywords = ["udp", "network"]
license = "BSD-3-Clause"

[dependencies]
serde = ">=0.6.1"

rmp = { version = ">=0.7.3", optional = true }
rmp-serde = { version = ">=0.8.2", optional = true }
serde_json = { version = ">=0.6.0", optional = true }

docopt = { version = ">=0.6.75", optional = true }
docopt_macros = { version = ">=0.6.75", optional = true }
rustc-serialize = { version = ">=0.3.16", optional = true }

[dev-dependencies]
serde_macros = ">=0.6.1"

[features]
default = []
msgpack_serialization = ["rmp", "rmp-serde"]
json_serialization = ["serde_json"]
udp_client = ["docopt", "docopt_macros", "rustc-serialize"]
